# Python-Spotify-Sort

./: .gitignore  file-structure.txt  oldsort.py  playlists.json  pyproject.toml  readme.md  reorder_playlist.py  requirements.txt  save_playlist_features.py  sort.sh  sort_playlist.py  sorted_tracks.csv  spotify_features.csv  start  start.py  start.sh
data/: playlist_features.csv  playlist_sorted.csv  playlists.json
src/: __init__.py  playlist_reorder.py  playlist_save.py  playlist_sort.py  spotify_client.py
