[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify_playlist_manager"
version = "0.1.0"
description = "A set of scripts to manage Spotify playlists"
authors = [
    { name = "Spencer Thayer", email = "me@spencethayer.com" },
]
license = "MIT"
dependencies = [
    "numpy",
    "python_tsp",
    "spotipy",
    "pandas",
    "tqdm",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "scipy",
    "requests",
    "joblib"
]